とりあえず私用PCから

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="stylesheet.css">
 <meta charset="UTF-8">
-<title>鳩時計</title>
+<title>インターバルタイマー</title>
 <script>
 
 function showNotification() {
